Support doc-values and multi-values for st_x and related functions