@@ -20,12 +20,13 @@ import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
-import org.elasticsearch.xpack.esql.expression.function.scalar.UnaryScalarFunction;
 
 import java.io.IOException;
 import java.util.List;
 
 import static org.elasticsearch.xpack.esql.core.type.DataType.DOUBLE;
+import static org.elasticsearch.xpack.esql.core.util.SpatialCoordinateTypes.CARTESIAN;
+import static org.elasticsearch.xpack.esql.core.util.SpatialCoordinateTypes.GEO;
 import static org.elasticsearch.xpack.esql.core.util.SpatialCoordinateTypes.UNSPECIFIED;
 import static org.elasticsearch.xpack.esql.expression.EsqlTypeResolutions.isSpatialPoint;
 
@@ -34,9 +35,9 @@ import static org.elasticsearch.xpack.esql.expression.EsqlTypeResolutions.isSpat
  * For cartesian geometries, the x-coordinate is the first coordinate.
  * For geographic geometries, the x-coordinate is the longitude.
  * The function `st_x` is defined in the <a href="https://www.ogc.org/standard/sfs/">OGC Simple Feature Access</a> standard.
- * Alternatively it is well described in PostGIS documentation at <a href="https://postgis.net/docs/ST_X.html">PostGIS:ST_X</a>.
+ * Alternatively, it is well described in PostGIS documentation at <a href="https://postgis.net/docs/ST_X.html">PostGIS:ST_X</a>.
  */
-public class StX extends UnaryScalarFunction {
+public class StX extends SpatialUnaryDocValuesFunction {
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(Expression.class, "StX", StX::new);
 
     @FunctionInfo(
@@ -53,11 +54,20 @@ public class StX extends UnaryScalarFunction {
             description = "Expression of type `geo_point` or `cartesian_point`. If `null`, the function returns `null`."
         ) Expression field
     ) {
-        super(source, field);
+        this(source, field, false);
+    }
+
+    private StX(Source source, Expression field, boolean spatialDocValues) {
+        super(source, field, spatialDocValues);
     }
 
     private StX(StreamInput in) throws IOException {
         super(in);
+    }
+
+    @Override
+    public SpatialDocValuesFunction withDocValues(boolean useDocValues) {
+        return new StX(source(), spatialField(), useDocValues);
     }
 
     @Override
@@ -67,12 +77,19 @@ public class StX extends UnaryScalarFunction {
 
     @Override
     protected Expression.TypeResolution resolveType() {
-        return isSpatialPoint(field(), sourceText(), TypeResolutions.ParamOrdinal.DEFAULT);
+        return isSpatialPoint(spatialField(), sourceText(), TypeResolutions.ParamOrdinal.DEFAULT);
     }
 
     @Override
     public EvalOperator.ExpressionEvaluator.Factory toEvaluator(ToEvaluator toEvaluator) {
-        return new StXFromWKBEvaluator.Factory(source(), toEvaluator.apply(field()));
+        if (spatialDocValues) {
+            return switch (spatialField().dataType()) {
+                case GEO_POINT -> new StXFromGeoDocValuesEvaluator.Factory(source(), toEvaluator.apply(spatialField()));
+                case CARTESIAN_POINT -> new StXFromCartesianDocValuesEvaluator.Factory(source(), toEvaluator.apply(spatialField()));
+                default -> throw new IllegalArgumentException("Cannot use doc values for type " + spatialField().dataType());
+            };
+        }
+        return new StXFromWKBEvaluator.Factory(source(), toEvaluator.apply(spatialField()));
     }
 
     @Override
@@ -82,16 +99,26 @@ public class StX extends UnaryScalarFunction {
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new StX(source(), newChildren.get(0));
+        return new StX(source(), newChildren.getFirst());
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, StX::new, field());
+        return NodeInfo.create(this, StX::new, spatialField());
     }
 
     @ConvertEvaluator(extraName = "FromWKB", warnExceptions = { IllegalArgumentException.class })
     static double fromWellKnownBinary(BytesRef in) {
         return UNSPECIFIED.wkbAsPoint(in).getX();
+    }
+
+    @ConvertEvaluator(extraName = "FromCartesianDocValues", warnExceptions = { IllegalArgumentException.class })
+    static double fromCartesianDocValues(long encoded) {
+        return CARTESIAN.decodeX(encoded);
+    }
+
+    @ConvertEvaluator(extraName = "FromGeoDocValues", warnExceptions = { IllegalArgumentException.class })
+    static double fromGeoDocValues(long encoded) {
+        return GEO.decodeX(encoded);
     }
 }
