@@ -10,22 +10,24 @@ package org.elasticsearch.xpack.esql.expression.function.scalar.spatial;
 import org.apache.lucene.util.BytesRef;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
-import org.elasticsearch.compute.ann.ConvertEvaluator;
+import org.elasticsearch.compute.ann.Evaluator;
+import org.elasticsearch.compute.ann.Position;
+import org.elasticsearch.compute.data.BytesRefBlock;
+import org.elasticsearch.compute.data.DoubleBlock;
+import org.elasticsearch.compute.data.LongBlock;
 import org.elasticsearch.compute.operator.EvalOperator;
-import org.elasticsearch.geometry.Point;
 import org.elasticsearch.geometry.utils.SpatialEnvelopeVisitor;
 import org.elasticsearch.geometry.utils.SpatialEnvelopeVisitor.WrapLongitude;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
-import org.elasticsearch.xpack.esql.core.expression.TypeResolutions;
 import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
+import org.elasticsearch.xpack.esql.core.util.SpatialCoordinateTypes;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesTo;
 import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesToLifecycle;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
-import org.elasticsearch.xpack.esql.expression.function.scalar.UnaryScalarFunction;
 
 import java.io.IOException;
 import java.util.List;
@@ -33,14 +35,13 @@ import java.util.List;
 import static org.elasticsearch.xpack.esql.core.type.DataType.DOUBLE;
 import static org.elasticsearch.xpack.esql.core.type.DataType.GEO_POINT;
 import static org.elasticsearch.xpack.esql.core.util.SpatialCoordinateTypes.UNSPECIFIED;
-import static org.elasticsearch.xpack.esql.expression.EsqlTypeResolutions.isSpatial;
 
 /**
  * Determines the minimum value of the y-coordinate from a geometry.
  * The function `st_ymin` is defined in the <a href="https://www.ogc.org/standard/sfs/">OGC Simple Feature Access</a> standard.
- * Alternatively it is well described in PostGIS documentation at <a href="https://postgis.net/docs/ST_YMIN.html">PostGIS:ST_YMIN</a>.
+ * Alternatively, it is well described in PostGIS documentation at <a href="https://postgis.net/docs/ST_YMIN.html">PostGIS:ST_YMIN</a>.
  */
-public class StYMin extends UnaryScalarFunction {
+public class StYMin extends SpatialUnaryDocValuesFunction {
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(Expression.class, "StYMin", StYMin::new);
 
     @FunctionInfo(
@@ -61,11 +62,20 @@ public class StYMin extends UnaryScalarFunction {
                 + "If `null`, the function returns `null`."
         ) Expression field
     ) {
-        super(source, field);
+        this(source, field, false);
+    }
+
+    private StYMin(Source source, Expression field, boolean spatialDocValues) {
+        super(source, field, spatialDocValues);
     }
 
     private StYMin(StreamInput in) throws IOException {
         super(in);
+    }
+
+    @Override
+    public SpatialDocValuesFunction withDocValues(boolean useDocValues) {
+        return new StYMin(source(), spatialField(), useDocValues);
     }
 
     @Override
@@ -74,16 +84,18 @@ public class StYMin extends UnaryScalarFunction {
     }
 
     @Override
-    protected TypeResolution resolveType() {
-        return isSpatial(field(), sourceText(), TypeResolutions.ParamOrdinal.DEFAULT);
-    }
-
-    @Override
     public EvalOperator.ExpressionEvaluator.Factory toEvaluator(ToEvaluator toEvaluator) {
-        if (field().dataType() == GEO_POINT || field().dataType() == DataType.GEO_SHAPE) {
-            return new StYMinFromWKBGeoEvaluator.Factory(source(), toEvaluator.apply(field()));
+        if (spatialDocValues) {
+            return switch (spatialField().dataType()) {
+                case GEO_POINT -> new StYMinFromDocValuesGeoEvaluator.Factory(source(), toEvaluator.apply(spatialField()));
+                case CARTESIAN_POINT -> new StYMinFromDocValuesEvaluator.Factory(source(), toEvaluator.apply(spatialField()));
+                default -> throw new IllegalArgumentException("Cannot use doc values for type " + spatialField().dataType());
+            };
         }
-        return new StYMinFromWKBEvaluator.Factory(source(), toEvaluator.apply(field()));
+        if (spatialField().dataType() == GEO_POINT || spatialField().dataType() == DataType.GEO_SHAPE) {
+            return new StYMinFromWKBGeoEvaluator.Factory(source(), toEvaluator.apply(spatialField()));
+        }
+        return new StYMinFromWKBEvaluator.Factory(source(), toEvaluator.apply(spatialField()));
     }
 
     @Override
@@ -93,37 +105,81 @@ public class StYMin extends UnaryScalarFunction {
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new StYMin(source(), newChildren.get(0));
+        return new StYMin(source(), newChildren.getFirst());
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, StYMin::new, field());
+        return NodeInfo.create(this, StYMin::new, spatialField());
     }
 
-    @ConvertEvaluator(extraName = "FromWKB", warnExceptions = { IllegalArgumentException.class })
-    static double fromWellKnownBinary(BytesRef wkb) {
-        var geometry = UNSPECIFIED.wkbToGeometry(wkb);
-        if (geometry instanceof Point point) {
-            return point.getY();
+    private static void fromWellKnownBinary(
+        DoubleBlock.Builder results,
+        @Position int p,
+        BytesRefBlock wkbBlock,
+        SpatialEnvelopeVisitor.PointVisitor pointVisitor
+    ) {
+        int firstValueIndex = wkbBlock.getFirstValueIndex(p);
+        int valueCount = wkbBlock.getValueCount(p);
+        if (valueCount == 0) {
+            results.appendNull();
+            return;
         }
-        var envelope = SpatialEnvelopeVisitor.visitCartesian(geometry);
-        if (envelope.isPresent()) {
-            return envelope.get().getMinY();
+        BytesRef scratch = new BytesRef();
+        var visitor = new SpatialEnvelopeVisitor(pointVisitor);
+        for (int i = 0; i < valueCount; i++) {
+            BytesRef wkb = wkbBlock.getBytesRef(firstValueIndex + i, scratch);
+            var geometry = UNSPECIFIED.wkbToGeometry(wkb);
+            geometry.visit(visitor);
+        }
+        if (pointVisitor.isValid()) {
+            results.appendDouble(visitor.getResult().getMinY());
+            return;
         }
         throw new IllegalArgumentException("Cannot determine envelope of geometry");
     }
 
-    @ConvertEvaluator(extraName = "FromWKBGeo", warnExceptions = { IllegalArgumentException.class })
-    static double fromWellKnownBinaryGeo(BytesRef wkb) {
-        var geometry = UNSPECIFIED.wkbToGeometry(wkb);
-        if (geometry instanceof Point point) {
-            return point.getY();
+    @Evaluator(extraName = "FromWKB", warnExceptions = { IllegalArgumentException.class })
+    static void fromWellKnownBinary(DoubleBlock.Builder results, @Position int p, BytesRefBlock wkbBlock) {
+        fromWellKnownBinary(results, p, wkbBlock, new SpatialEnvelopeVisitor.CartesianPointVisitor());
+    }
+
+    @Evaluator(extraName = "FromWKBGeo", warnExceptions = { IllegalArgumentException.class })
+    static void fromWellKnownBinaryGeo(DoubleBlock.Builder results, @Position int p, BytesRefBlock wkbBlock) {
+        fromWellKnownBinary(results, p, wkbBlock, new SpatialEnvelopeVisitor.GeoPointVisitor(WrapLongitude.WRAP));
+    }
+
+    private static void fromDocValues(
+        DoubleBlock.Builder results,
+        @Position int p,
+        LongBlock encodedBlock,
+        SpatialCoordinateTypes spatialCoordinateType
+    ) {
+        int firstValueIndex = encodedBlock.getFirstValueIndex(p);
+        int valueCount = encodedBlock.getValueCount(p);
+        if (valueCount == 0) {
+            results.appendNull();
+            return;
         }
-        var envelope = SpatialEnvelopeVisitor.visitGeo(geometry, WrapLongitude.WRAP);
-        if (envelope.isPresent()) {
-            return envelope.get().getMinY();
+        double minY = Double.POSITIVE_INFINITY;
+        for (int i = 0; i < valueCount; i++) {
+            long encoded = encodedBlock.getLong(firstValueIndex + i);
+            minY = Math.min(minY, spatialCoordinateType.decodeY(encoded));
+        }
+        if (Double.isFinite(minY)) {
+            results.appendDouble(minY);
+            return;
         }
         throw new IllegalArgumentException("Cannot determine envelope of geometry");
+    }
+
+    @Evaluator(extraName = "FromDocValues", warnExceptions = { IllegalArgumentException.class })
+    static void fromDocValues(DoubleBlock.Builder results, @Position int p, LongBlock encodedBlock) {
+        fromDocValues(results, p, encodedBlock, SpatialCoordinateTypes.CARTESIAN);
+    }
+
+    @Evaluator(extraName = "FromDocValuesGeo", warnExceptions = { IllegalArgumentException.class })
+    static void fromDocValuesGeo(DoubleBlock.Builder results, @Position int p, LongBlock encodedBlock) {
+        fromDocValues(results, p, encodedBlock, SpatialCoordinateTypes.GEO);
     }
 }
